fluent-syntax/test/fixtures_behavior/call_expression_with_wrong_value_type.ftl
key = { BUILTIN(key: foo) }
//~ ERROR E0006, pos 21, args "value"
